--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
-  "buildCommand": "cd client && npm run build",
-  "outputDirectory": "client/dist",
-  "env": {
-    "VITE_API_URL": "@vite_api_url"
-  },
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist/public",
   "rewrites": [
     {
       "source": "/(.*)",
@@ -11,3 +8,4 @@
     }
   ]
 }
+
