--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,25 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist/public",
+  "framework": "vite",
+  "env": {
+    "NODE_ENV": "production"
+  },
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
     }
   ]
 }
