--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "wouter": "^3.3.5",
     "zod": "^4.1.12",
     "jsonwebtoken": "^9.0.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@builder.io/vite-plugin-jsx-loc": "^0.1.1",
