--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,8 @@
   "cleanUrls": true,
   "trailingSlash": false,
   "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs18.x"
+    "api/index.ts": {
+      "runtime": "nodejs@18.x"
     }
   },
   "headers": [
