🔧 Revisão e correção completa do código - Fase 0.0
CORREÇÕES IMPLEMENTADAS:

✅ Estrutura de Projeto
- Separado package.json em monorepo (root, client, server)
- Removidas dependências misturadas entre frontend e backend
- Criado client/package.json com apenas dependências React/Vite
- Criado server/package.json com apenas dependências Node/Express

✅ Backend (Server)
- Criado server/tsconfig.json para compilação TypeScript
- Criado server/.env com variáveis de ambiente padrão
- Melhorado server/index.ts com logging e error handling
- Melhorado server/db.ts com event handlers e logging
- Adicionado middleware de request logging
- Adicionado endpoint raiz (GET /)
- Adicionado 404 handler e error handler global

✅ Docker & Deployment
- Corrigido Dockerfile para estrutura real do projeto
- Atualizado docker-compose.yml com CORS múltiplo
- Adicionado suporte para localhost, IP do container, host.docker.internal
- Melhorado health check do backend

✅ Configuração
- Atualizado .env.example com TODAS as variáveis
- Melhorado .gitignore com entradas adicionais
- Adicionado suporte para pnpm-lock.yaml e package-lock.json

✅ Documentação
- Criado README_SETUP.md com instruções completas
- Criado TROUBLESHOOTING.md com soluções para problemas comuns
- Documentadas credenciais de login padrão
- Documentados todos os endpoints da API

PROBLEMAS CORRIGIDOS:

❌ Dockerfile procurava por server/package.json inexistente
❌ CORS hardcoded não funcionava com IP do Docker
❌ Falta de server/tsconfig.json para compilação TypeScript
❌ Dependências misturadas entre frontend e backend
❌ Falta de documentação clara de setup
❌ Falta de guia de troubleshooting
❌ Logging inadequado no backend
❌ Tratamento de erros incompleto

PRONTO PARA:
✅ Apagar repositório local e recomeçar do zero
✅ Usar estrutura corrigida como base
✅ Evitar todos os problemas encontrados anteriormente

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,25 @@
-# Frontend
+# Frontend Configuration
 VITE_API_URL=http://localhost:3001
 
-# Backend
+# Backend - Database Configuration
+DB_HOST=postgres
+DB_PORT=5432
+DB_USER=gaia_user
+DB_PASSWORD=gaia_password
+DB_NAME=gaia_db
+DATABASE_URL=postgresql://gaia_user:gaia_password@postgres:5432/gaia_db
+
+# Backend - Server Configuration
 PORT=3001
-JWT_SECRET=gaia-secret-key-2025
 NODE_ENV=development
+
+# Backend - JWT Configuration
+JWT_SECRET=gaia-super-secret-jwt-key-2025-change-in-production
+JWT_EXPIRATION=15m
+
+# Backend - Security
+AES_SECRET_KEY=gaia-aes-secret-key-2025-change-in-production
+
+# Backend - CORS Configuration
+CORS_ORIGIN=http://localhost:3000,http://172.18.0.1:3000,http://host.docker.internal:3000
 
