--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,26 +29,36 @@ services:
       dockerfile: Dockerfile
     container_name: gaia-backend
     environment:
+      # Database Configuration
       DATABASE_URL: postgresql://gaia_user:gaia_password@postgres:5432/gaia_db
       DB_HOST: postgres
       DB_PORT: 5432
       DB_USER: gaia_user
       DB_PASSWORD: gaia_password
       DB_NAME: gaia_db
-      JWT_SECRET: gaia-super-secret-jwt-key-2025-change-in-production
-      JWT_EXPIRATION: 15m
+      
+      # Server Configuration
       PORT: 3001
       NODE_ENV: development
+      
+      # JWT Configuration
+      JWT_SECRET: gaia-super-secret-jwt-key-2025-change-in-production
+      JWT_EXPIRATION: 15m
+      
+      # Security
       AES_SECRET_KEY: gaia-aes-secret-key-2025-change-in-production
-      CORS_ORIGIN: http://localhost:3000
+      
+      # CORS Configuration - Allow multiple origins for different environments
+      CORS_ORIGIN: http://localhost:3000,http://172.18.0.1:3000,http://host.docker.internal:3000
     ports:
       - "3001:3001"
     depends_on:
       postgres:
         condition: service_healthy
     volumes:
-      - ./server/src:/app/src
+      - ./server:/app
       - /app/node_modules
+      - /app/dist
     networks:
       - gaia-network
     command: npm run dev
