--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Dependencies
 **/node_modules
 .pnpm-store/
+pnpm-lock.yaml
+package-lock.json
 
 # Build outputs
 dist/
@@ -104,3 +106,8 @@ temp/
 *.db
 *.sqlite
 *.sqlite3
+postgres_data/
+
+# Docker
+.docker/
+docker-compose.override.yml
