--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=10.0.0"
+  },
+  "dependencies": {
+    "tw-animate-css": "^1.4.0"
   }
 }
-
